--- a/index.html
+++ b/index.html
@@ -1,18 +1,112 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Enter Password</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Quicksand', sans-serif;
+      background-color: #d6f0ff;
+      overflow: hidden;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .floating-bevo {
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      background-image: url('bevo-bg-small.png');
+      background-size: contain;
+      background-repeat: no-repeat;
+      opacity: 0.4;
+      animation: floatUp linear infinite;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 0;
+      }
+      50% {
+        opacity: 0.4;
+      }
+      100% {
+        transform: translateY(-10vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
+
+    .login-container {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 40px;
+      border-radius: 30px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+      transition: transform 0.3s ease;
+      z-index: 10;
+    }
+
+    .login-container:hover {
+      transform: scale(1.02);
+    }
+
+    input[type="password"] {
+      width: 80%;
+      padding: 12px 20px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 25px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      font-size: 1em;
+      outline: none;
+      transition: box-shadow 0.2s ease;
+    }
+
+    input[type="password"]:focus {
+      box-shadow: 0 0 10px rgba(100, 100, 255, 0.4);
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 12px 30px;
+      background-color: #a7d7ff;
+      color: #333;
+      border: none;
+      border-radius: 20px;
+      font-size: 1em;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #7fcaff;
+    }
+
+    #error {
+      color: red;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-  <h2>Enter Password to View Message</h2>
-  <input type="password" id="password" placeholder="Enter password" />
-  <button onclick="checkPassword()">Submit</button>
-  <p id="error" style="color:red;"></p>
+  <div class="login-container">
+    <input type="password" id="password" placeholder="Enter password" />
+    <br>
+    <button onclick="checkPassword()">Submit</button>
+    <p id="error"></p>
+  </div>
 
   <script>
     function checkPassword() {
-      const correctPassword = "twinklepanda"; // change to your password
+      const correctPassword = "open123";
       const enteredPassword = document.getElementById("password").value;
       if (enteredPassword === correctPassword) {
         sessionStorage.setItem("authenticated", "true");
@@ -20,6 +114,16 @@
       } else {
         document.getElementById("error").textContent = "Incorrect password.";
       }
+    }
+
+    // Add floating Bevos
+    for (let i = 0; i < 20; i++) {
+      const bevo = document.createElement('div');
+      bevo.classList.add('floating-bevo');
+      bevo.style.left = Math.random() * 100 + "vw";
+      bevo.style.animationDuration = (5 + Math.random() * 5) + "s";
+      bevo.style.animationDelay = Math.random() * 5 + "s";
+      document.body.appendChild(bevo);
     }
   </script>
 </body>
