--- a/message.html
+++ b/message.html
@@ -1,13 +1,137 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Secret Message</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Quicksand', sans-serif;
+      background-color: #fef6f0;
+      background-image: url('bevo-bg-small.png');
+      background-size: 80px;
+      background-repeat: repeat;
+      background-position: center;
+      color: #333;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .message-box {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+      text-align: left;
+      max-width: 900px;
+      width: 90%;
+      z-index: 10;
+      margin: 40px auto;
+    }
+
+    h2 {
+      font-size: 2.2em;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
-  <div id="message" style="display:none;">
-    <h2>🎉 Here's your secret message!</h2>
-    <p>This is the hidden paragraph you wanted to show. You can edit this as needed.</p>
+  <div id="message" class="message-box" style="display:none;">
+    <h2>🎓</h2>
+    <p>
+      Something huge came up in my life about a year ago, and I couldn't be more grateful. Words, emojis, stickers, gifts, art, nothing in the world can express a fraction of the emotions behind what I'm about to share with you. It happened so naturally as well, and has completely changed the trajectory of my life for the better. Here is the story of how I met my lil Ethan and I wouldn't have liked it any other way ☺️
+    </p>
+    <p>
+On the Denmark trip, Sejal first introduced to me the idea of setting me up with a guy named Ethan she knows from UT. She described him as this divine human being and I could tell she held him in high regard. I'm not sure if she remembers this, and I don't think I've mentioned this before, but she yapped about Ethan so much to the point where I got a bit annoyed 😂 Like he seems great, I'm open to it, let's move on to another topic. And from then on, it was history.
+</p>
+<p>
+Sejal has played such a pivotal role in my life and has been a huge part in my relationship. She taught me so much, and I'll be eternally thankful. As a good friend, rather than just putting me in contact with Ethan, she actually tagged along on our first date for funsies. At first, I was hesitant and didn't know what to expect. I had no doubt I would have a fun time, but even though we were just simply meeting each other for the first time to see if things may work out, I couldn't help but self-evaluate whether I was ready to enter a relationship. Was I giving Ethan a fair chance? And if things don't work out for whatever reason, will it be for proper reasons and unfold in the best way possible?
+</p>
+<p>
+Huge props to Ethan for planning out the whole date and making sure everything ran smoothly. I think he did a really good job accommodating everyone's needs. I still remember what went down to this day, mainly Sejal's awesome bowling skills along with her fear of cockroaches, the hilarious comments I made, and the inside jokes Ethan and Sejal shared. By observing their dynamic play out through such simple, everyday moments, I was able to get a glimpse of the type of person Ethan is.
+</p>
+<p>
+We exchanged contacts and I have to say Ethan was very good at keeping up conversation, both through messaging and in person. We gave it our best shot and set up several dates afterwards, one of which Ethan drove through a tornado for, as I'd like to describe it 😂 Ethan was very helpful, giving me tips to prepare for my interview with Intel. I still remember how off-track that conversation went 😅 Our first call was also super duper meaningful as it literally lasted 5 seconds. And how could I forget the Minecraft house! As they say, what happens in the game stays in the game 😂 Attending Sejal's graduation party was also one for the books and gradually, as we spent more and more time together, I realized how aligned our values are and how Ethan had more sides to him than I initially thought.
+</p>
+<p>
+Through a short span of 3 weeks, we went from complete strangers to very close friends. At the end of one date, we had a conversation about what we both expected going into a relationship. As nervous as Ethan might've been during that whole ordeal, I was actually very satisfied with the topics we addressed and his responses: super considerate, extremely reasonable, and very well-phrased. You could say it was a sort of turning point, because prior to the talk, I was still on the fence. I've never been in such a relationship before and I don't understand my own feelings well enough to tell if it was romantic. I viewed it as a binary decision rather than a potential relationship that could grow and evolve over time. Plus, it's only been less than a month, which for someone like me, I felt that only time could let me get to know Ethan better and make a more informed decision.
+</p>
+<p>
+Well, scratch that 😅 We ended up spending the rest of our summer as a couple. I still remember that day, how happy Ethan was to have entered his first relationship. Oh, how I wish I was there in person. All I remember was that he was red as a tomato and at a loss for words. We were both overjoyed and immediately began to brainstorm possible ways to share the good news with family and friends. To this day, I still remember the words exchanged over that unforgettable phone call and the feeling in the air: it was more than just an overwhelming flood of emotions. From day one, it's been a forward-looking blend of excitement for what's in store and dedication to prioritize each other no matter what ♥️
+</p>
+<p>
+The logical side of my brain has always asked the question why. It started with "why me" but then branched beyond that. Questions like "why am I the one Ethan feels the most comfortable around" or "how is it that Ethan trusts me so much" can't always be explained. Same with the "who loves each other more" debate. No, it's not intuition, a 6th sense, or gut feeling either. It's something on a deeper level that doesn't need to be fully understood to be real 🥰
+</p>
+<p>
+Ethan has taught me what it means to truly love someone. We've both grown so much — I've grown so much. I still remember late-night convos I had with my baby during sophomore year of A&M about what love is and how to know if I have feelings for someone. Her answer was "you just kind of know", which left me even more puzzled. Extensive research was involved and I was still left in the void without a clear answer.
+</p>
+<p>
+But now, I understand in a way I never did before. I understand what it means to have someone you want to share all the ups and downs of life with, someone you're willing to drop everything for, and someone you wouldn't trade for anything in the world. I previously didn't know I was capable of loving someone so much in such a way. Heck, I thought I was gay 😂 But I truly can't think of a more perfect match. Ethan knows how to deal with all my personalities and I still can't wrap my mind around how I found someone so compatible, someone who is the perfect balance of logic, emotion, and silliness 😜
+</p>
+<p>
+Ethan has provided me encouragement like no other. He is my safe haven, allowing me to be myself as I please 😂 I am truly convinced that relationships bring out our inner child. The world is a harsh place and as we get gradually mature, we grow out of our kid self — we lose that innocence, that shine, that passion. Having a partner where you feel comfortable being your kid self speaks volumes about the depth of trust and emotional connection.
+</p>
+<p>
+I think this just shows how secure I'm around Ethan. And maybe that's what makes the little things he does for me feel so meaningful. He helps me with anything and everything, from treating me like a princess to giving solid advice. He's happy if I'm happy and if that's not true love, then I don't know what is 🥹 A guy like this only comes around once a lifetime, and I'm so glad to call him mine ☺️ I don't know what I did to deserve this, but I know I'm the luckiest person alive.
+</p>
+<p>
+I've never felt so supported either. The feeling of knowing that someone will always have my back no matter what is the greatest reassurance anyone can have. It's an unmatched kind of peace that words can't fully capture. A love like this is something I never imagined I would experience, yet now I can't picture my life without it. This is truly life's greatest gift, and I don't ever want to take it for granted 🥰
+</p>
+<p>
+But what's even more fascinating is that this is a two-way street 😂 There is someone out there that trusts me unconditionally, who wants to give me their all, and become the best version of themselves simply just for who I am. Because of me, everyday is so much sweeter and they look forward to the next day, and the day after that. They want to take on this journey called life together. A love this genuine is pure bliss, and even now, it still feels kinda surreal. Truly something I never knew I needed until I had it and I think everyone should experience this kind of love.
+</p>
+<p>
+Something that still surprises me is how similar and in sync we are. Before we first met each other, it was as if we lived in a parallel universe. Because of these shared experiences, we were able to bond on a very deep and emotional level. I value the past, the good and the bad, as it has shaped us into the person we are today. After our universes collided, there were several small but telling moments that showed we are on the same wavelength, whether it be having the same go-to order at boba places or ordering the same dishes at a restaurant without discussion. And to this day, these are still moments I play back in my head, believe it or not, and I look forward to many more to come 🥰 Ethan and I are literally the same person. You may ask, how do I know that Ethan is the one? Well, I just do 😂 
+</p>
+<p>
+I think it's important to find someone with similar core values, someone who is reliable, and someone you can just enjoy being around, even in silence. We can't choose our parents but we can choose our children's future parent, am I right 😂 Similar to a lot of couples out there, our love language is quality time and acts of service. Love is more than flowery language or grand gestures: it's actions, consistency, and doing your best to show up for each other. The tiniest of gestures speaks volumes and can be just as heart-warming, if not more.
+</p>
+<p>
+I think I'm at a good place in life now. If you were to tell past Anna this was what was in store, past Anna would not believe you. Having an actual close friend group? Getting a boyfriend? Right out of college? I thought I'd be single forever 😂 I have grown so much since then. I think senior year of college has opened me up to more avenues of friendship, and then getting introduced to my future boyfriend was just the perfect way to top it off.
+</p>
+<p>
+I've always thought the peak of my social life would be during my A&M years and as that chapter came to a close, I thought everyone would move to different cities and start their own lives, so I never expected getting as close, if not closer, with others outside my A&M friend group. After all, it took me 4 years to make these connections and build such friendships. But life has a way of proving you wrong. I never imagined becoming besties with folks back from high school, let alone them being the one introducing me to my future partner. Funny how things work out, huh?
+</p>
+<p>
+After Ethan and I started dating, our worlds collided when we met each other's friends and when they met each other. Because of that, San Antonio will always hold a special place in my heart. I think I'd actually never get bored of taking trips there, even if it weren't to see our friends or if there's nothing to do. Of course I enjoy trying new things and visiting places I take interest in, but I also have a side of myself where I subconsciously prioritize sentimental connections, so even the most boring of places feel special when they're tied to fond memories. And with that special someone by your side, anywhere can become an adventure ☺️
+</p>
+<p>
+I think the perfect example of this is Ethan's latest trip to Pittsburgh over spring break. Even though I was swamped with work and couldn't take as much time as I wanted to experience the city together, the trip was still very worthwhile. It's not about exploring all the sights and sounds of Pittsburgh, but more about being present with him and cherishing those everyday moments — like bringing Ethan along with me to campus or taking him to restaurants I usually go to during the school week. It's not about where you are or what you're doing, but who you're with that makes the trip unforgettably special. 
+</p>
+<p>
+Sometimes I wonder how our relationship would have grown if we both attended UT. I can see us going on more dates and me getting to gradually know Ethan's inner circle, which is very lovely ☺️ (who knows, I might've gotten hooked to magic) 😅 However, I wouldn't have our relationship any other way. Why? Well, what happened was meant to happen. Long distance put our relationship to the test from the start, precisely our 2-month dating anniversary, but despite that, I had no doubt that we would grow stronger together. And to this day, our love is more passionate than ever.
+</p>
+<p>
+I'm curious to see where this relationship will take me a few years down the road. I've already grown so much in like the past year. For example, I learned to set my own boundaries, be more considerate, and prioritize Ethan above all else. Ethan is truly a specimen of a human being in the sense that he is both rational and emotionally attuned. He navigates the world with both reason and feeling, picks up on the smallest things, and has an almost uncanny intuition. I think those are very admirable traits, and I wish I had them 😂 There are plenty of fish in the sea with high EQ, but Ethan stands out because he just gets things.
+</p>
+<p>
+For instance, some people are emotionally intelligent, but don't always act on it, use it for their own personal gain, or overextend their empathy. I should know, because I've encountered people like that. I've always had trouble processing emotions or putting thoughts into words, but Ethan is just three steps ahead of any situation: he picks up on patterns, knows when to say something and when to just listen, and somehow always understands what the speaker means, even if they don't say it outright. It's so on point that mind-blowing is an understatement. His problem-solving skills are out of this world, and needless to say that with these traits, his personal and professional life will only continue to flourish.
+</p>
+<p>
+That being said, another trait I admire is Ethan's positive mindset. Even though the job market is very tough right now, he remains calm and optimistic, taking a measured and steady approach. He has a very grounded mindset in that he's developed his own recruiting strategy and has a clear idea of what he wants. If I were in the same position, I'd probably spiral into self-doubt or lower my expectations to prevent disappointment. But not Ethan, Ethan is different. His quiet confidence is another admirable trait that I wish I had.
+</p>
+<p>
+The confidence isn't just in his attitude, but also in how he handles challenges and navigates uncertainty. Through time, I've noticed how effortlessly he thinks several steps ahead. That's why whenever I'm in a quandary, he is the first person I turn to. It's reassuring knowing that no matter what challenges I face, Ethan can come up with a reasonable method of approach and anticipate unexpected twists. And even if he doesn't know, that's alright because we can work together to figure it out. Whether it be a tricky social situation or an important decision, Ethan's analytical mind dissects complex issues and provides insights in a way I've never considered before.
+</p>
+<p>
+Ethan is also rational without being cold. He balances logic and emotion in a way that is super rare, where he won't let emotions cloud his judgment, but he also won't dismiss feelings as irrational or unimportant. That's a hard balance to strike, yet he does it so effortlessly. Ethan is someone who makes you want to be better, just by being himself. I guess only time will tell what kind of person I'll grow to become. Knowing that Ethan will treat me right, I'm positive it won't go anywhere but up ☺️ 
+</p>
+<p>
+I believe love blossoming during young adulthood is truly one of the most beautiful things in life. People meet thousands of others during their lifetime, and me having met my special someone at the right time is something that many people wish for. Some people never find their true love, some miss their opportunity, some don't treasure it, and some simply cross paths at the wrong time. Everyone's story is different, and I believe that ours is a unique one we're writing the next pages of together. We're becoming the people we want to be for each other, and I can't wait to see how we grow in the chapters to come ♥️
+</p>
+<p>
+I'm so grateful for this journey we've been on together. It's been a rollercoaster of emotions, but I wouldn't trade it for anything. I'm excited to see what the future holds for us and to continue growing together. I love you, Ethan.
+</p>
   </div>
 
   <script>
