--- a/message.html
+++ b/message.html
@@ -127,10 +127,7 @@ The confidence isn't just in his attitude, but also in how he handles challenges
 Ethan is also rational without being cold. He balances logic and emotion in a way that is super rare, where he won't let emotions cloud his judgment, but he also won't dismiss feelings as irrational or unimportant. That's a hard balance to strike, yet he does it so effortlessly. Ethan is someone who makes you want to be better, just by being himself. I guess only time will tell what kind of person I'll grow to become. Knowing that Ethan will treat me right, I'm positive it won't go anywhere but up ☺️ 
 </p>
 <p>
-I believe love blossoming during young adulthood is truly one of the most beautiful things in life. People meet thousands of others during their lifetime, and me having met my special someone at the right time is something that many people wish for. Some people never find their true love, some miss their opportunity, some don't treasure it, and some simply cross paths at the wrong time. Everyone's story is different, and I believe that ours is a unique one we're writing the next pages of together. We're becoming the people we want to be for each other, and I can't wait to see how we grow in the chapters to come ♥️
-</p>
-<p>
-I'm so grateful for this journey we've been on together. It's been a rollercoaster of emotions, but I wouldn't trade it for anything. I'm excited to see what the future holds for us and to continue growing together. I love you, Ethan.
+I believe love blossoming during young adulthood is truly one of the most beautiful things in life. People meet thousands of others during their lifetime, and me having met my special someone at the right time is something that many people wish for. Some people never find their true love, some miss their opportunity, some don't treasure it, and some simply cross paths at the wrong time. Everyone's story is different, and I believe that ours is a unique one we're writing the next pages of together. We're becoming the people we want to be for each other, and I can't wait to see how we grow in the chapters to come 💖
 </p>
   </div>
 
